--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_gravity="fill"
     tools:context="com.example.oliver.androidlabs.LoginActivity">
 
 
@@ -41,7 +42,9 @@
         android:id="@+id/imageView"
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:src="@drawable/flag" />
+        android:src="@drawable/flag"
+       android:layout_gravity="fill"
+        />
 
     <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
