--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,11 +17,9 @@
         android:text="@string/login_message" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/userName1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/login_name"
         android:inputType="textEmailAddress" />
 
     <TextView
@@ -31,7 +29,7 @@
         android:text="@string/pw" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/passWord1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -46,32 +44,25 @@
        android:layout_gravity="fill"
         />
 
-    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="245dp"
+
+    <Button
+        android:id="@+id/lgn1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:alignmentMode="alignMargins"
-        android:columnCount="2"
-        android:rowCount="1">
+        android:text="@string/lgn" />
 
-
-        <Button
+    <Button
             android:id="@+id/gi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_row="0"
             android:text="@string/gi" />
 
         <Button
             android:id="@+id/ga"
+            android:layout_below="@+id/gi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_column="1"
-            android:layout_row="0"
             android:text="@string/ga" />
 
-    </GridLayout>
+
 </LinearLayout>
